APIs/googleapis.com/cloudfunctions/v1/javascript-client/README.md
# cloud_functions_api

CloudFunctionsApi - JavaScript client for cloud_functions_api
Manages lightweight user-provided functions executed in response to events.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: v1
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install cloud_functions_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your cloud_functions_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var CloudFunctionsApi = require('cloud_functions_api');

var defaultClient = CloudFunctionsApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new CloudFunctionsApi.OperationsApi()
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'filter': "filter_example", // {String} The standard list filter.
  'name': "name_example", // {String} The name of the operation's parent resource.
  'pageSize': 56, // {Number} The standard list page size.
  'pageToken': "pageToken_example" // {String} The standard list page token.
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.cloudfunctionsOperationsList(opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://cloudfunctions.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CloudFunctionsApi.OperationsApi* | [**cloudfunctionsOperationsList**](docs/OperationsApi.md#cloudfunctionsOperationsList) | **GET** /v1/operations | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsCall**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsCall) | **POST** /v1/{name}:call | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsCreate**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsCreate) | **POST** /v1/{location}/functions | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsDelete**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsDelete) | **DELETE** /v1/{name} | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsGenerateDownloadUrl**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsGenerateDownloadUrl) | **POST** /v1/{name}:generateDownloadUrl | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsGenerateUploadUrl**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsGenerateUploadUrl) | **POST** /v1/{parent}/functions:generateUploadUrl | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsGet**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsGet) | **GET** /v1/{name} | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsGetIamPolicy**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsGetIamPolicy) | **GET** /v1/{resource}:getIamPolicy | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsList**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsList) | **GET** /v1/{parent}/functions | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsPatch**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsPatch) | **PATCH** /v1/{name} | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsSetIamPolicy**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsSetIamPolicy) | **POST** /v1/{resource}:setIamPolicy | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsTestIamPermissions**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsTestIamPermissions) | **POST** /v1/{resource}:testIamPermissions | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsList**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsList) | **GET** /v1/{name}/locations | 


## Documentation for Models

 - [CloudFunctionsApi.AuditConfig](docs/AuditConfig.md)
 - [CloudFunctionsApi.AuditLogConfig](docs/AuditLogConfig.md)
 - [CloudFunctionsApi.Binding](docs/Binding.md)
 - [CloudFunctionsApi.CallFunctionRequest](docs/CallFunctionRequest.md)
 - [CloudFunctionsApi.CallFunctionResponse](docs/CallFunctionResponse.md)
 - [CloudFunctionsApi.CloudFunction](docs/CloudFunction.md)
 - [CloudFunctionsApi.EventTrigger](docs/EventTrigger.md)
 - [CloudFunctionsApi.Expr](docs/Expr.md)
 - [CloudFunctionsApi.FailurePolicy](docs/FailurePolicy.md)
 - [CloudFunctionsApi.GenerateDownloadUrlRequest](docs/GenerateDownloadUrlRequest.md)
 - [CloudFunctionsApi.GenerateDownloadUrlResponse](docs/GenerateDownloadUrlResponse.md)
 - [CloudFunctionsApi.GenerateUploadUrlRequest](docs/GenerateUploadUrlRequest.md)
 - [CloudFunctionsApi.GenerateUploadUrlResponse](docs/GenerateUploadUrlResponse.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2LocationMetadata](docs/GoogleCloudFunctionsV2LocationMetadata.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2OperationMetadata](docs/GoogleCloudFunctionsV2OperationMetadata.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2Stage](docs/GoogleCloudFunctionsV2Stage.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2StateMessage](docs/GoogleCloudFunctionsV2StateMessage.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2alphaLocationMetadata](docs/GoogleCloudFunctionsV2alphaLocationMetadata.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2alphaOperationMetadata](docs/GoogleCloudFunctionsV2alphaOperationMetadata.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2alphaStage](docs/GoogleCloudFunctionsV2alphaStage.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2alphaStateMessage](docs/GoogleCloudFunctionsV2alphaStateMessage.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2betaLocationMetadata](docs/GoogleCloudFunctionsV2betaLocationMetadata.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2betaOperationMetadata](docs/GoogleCloudFunctionsV2betaOperationMetadata.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2betaStage](docs/GoogleCloudFunctionsV2betaStage.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2betaStateMessage](docs/GoogleCloudFunctionsV2betaStateMessage.md)
 - [CloudFunctionsApi.HttpsTrigger](docs/HttpsTrigger.md)
 - [CloudFunctionsApi.ListFunctionsResponse](docs/ListFunctionsResponse.md)
 - [CloudFunctionsApi.ListLocationsResponse](docs/ListLocationsResponse.md)
 - [CloudFunctionsApi.ListOperationsResponse](docs/ListOperationsResponse.md)
 - [CloudFunctionsApi.Location](docs/Location.md)
 - [CloudFunctionsApi.OnDeployUpdatePolicy](docs/OnDeployUpdatePolicy.md)
 - [CloudFunctionsApi.Operation](docs/Operation.md)
 - [CloudFunctionsApi.OperationMetadataV1](docs/OperationMetadataV1.md)
 - [CloudFunctionsApi.Policy](docs/Policy.md)
 - [CloudFunctionsApi.SecretEnvVar](docs/SecretEnvVar.md)
 - [CloudFunctionsApi.SecretVersion](docs/SecretVersion.md)
 - [CloudFunctionsApi.SecretVolume](docs/SecretVolume.md)
 - [CloudFunctionsApi.SetIamPolicyRequest](docs/SetIamPolicyRequest.md)
 - [CloudFunctionsApi.SourceRepository](docs/SourceRepository.md)
 - [CloudFunctionsApi.Status](docs/Status.md)
 - [CloudFunctionsApi.TestIamPermissionsRequest](docs/TestIamPermissionsRequest.md)
 - [CloudFunctionsApi.TestIamPermissionsResponse](docs/TestIamPermissionsResponse.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

