APIs/googleapis.com/cloudfunctions/v2/javascript-client/README.md
# cloud_functions_api

CloudFunctionsApi - JavaScript client for cloud_functions_api
Manages lightweight user-provided functions executed in response to events.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2
- Package version: v2
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install cloud_functions_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your cloud_functions_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var CloudFunctionsApi = require('cloud_functions_api');

var defaultClient = CloudFunctionsApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new CloudFunctionsApi.ProjectsApi()
var name = "name_example"; // {String} Required. The name of the function for which upgrade should be aborted.
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'body': {key: null} // {Object} 
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.cloudfunctionsProjectsLocationsFunctionsAbortFunctionUpgrade(name, opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://cloudfunctions.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsAbortFunctionUpgrade**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsAbortFunctionUpgrade) | **POST** /v2/{name}:abortFunctionUpgrade | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsCommitFunctionUpgrade**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsCommitFunctionUpgrade) | **POST** /v2/{name}:commitFunctionUpgrade | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsCreate**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsCreate) | **POST** /v2/{parent}/functions | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsDelete**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsDelete) | **DELETE** /v2/{name} | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsGenerateDownloadUrl**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsGenerateDownloadUrl) | **POST** /v2/{name}:generateDownloadUrl | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsGenerateUploadUrl**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsGenerateUploadUrl) | **POST** /v2/{parent}/functions:generateUploadUrl | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsGetIamPolicy**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsGetIamPolicy) | **GET** /v2/{resource}:getIamPolicy | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsList**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsList) | **GET** /v2/{parent}/functions | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsPatch**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsPatch) | **PATCH** /v2/{name} | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsRedirectFunctionUpgradeTraffic**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsRedirectFunctionUpgradeTraffic) | **POST** /v2/{name}:redirectFunctionUpgradeTraffic | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsRollbackFunctionUpgradeTraffic**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsRollbackFunctionUpgradeTraffic) | **POST** /v2/{name}:rollbackFunctionUpgradeTraffic | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsSetIamPolicy**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsSetIamPolicy) | **POST** /v2/{resource}:setIamPolicy | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsSetupFunctionUpgradeConfig**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsSetupFunctionUpgradeConfig) | **POST** /v2/{name}:setupFunctionUpgradeConfig | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsFunctionsTestIamPermissions**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsFunctionsTestIamPermissions) | **POST** /v2/{resource}:testIamPermissions | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsList**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsList) | **GET** /v2/{name}/locations | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsOperationsGet**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsOperationsGet) | **GET** /v2/{name} | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsOperationsList**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsOperationsList) | **GET** /v2/{name}/operations | 
*CloudFunctionsApi.ProjectsApi* | [**cloudfunctionsProjectsLocationsRuntimesList**](docs/ProjectsApi.md#cloudfunctionsProjectsLocationsRuntimesList) | **GET** /v2/{parent}/runtimes | 


## Documentation for Models

 - [CloudFunctionsApi.AuditConfig](docs/AuditConfig.md)
 - [CloudFunctionsApi.AuditLogConfig](docs/AuditLogConfig.md)
 - [CloudFunctionsApi.Binding](docs/Binding.md)
 - [CloudFunctionsApi.BuildConfig](docs/BuildConfig.md)
 - [CloudFunctionsApi.EventFilter](docs/EventFilter.md)
 - [CloudFunctionsApi.EventTrigger](docs/EventTrigger.md)
 - [CloudFunctionsApi.Expr](docs/Expr.md)
 - [CloudFunctionsApi.Function](docs/Function.md)
 - [CloudFunctionsApi.GenerateDownloadUrlResponse](docs/GenerateDownloadUrlResponse.md)
 - [CloudFunctionsApi.GenerateUploadUrlRequest](docs/GenerateUploadUrlRequest.md)
 - [CloudFunctionsApi.GenerateUploadUrlResponse](docs/GenerateUploadUrlResponse.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2LocationMetadata](docs/GoogleCloudFunctionsV2LocationMetadata.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2OperationMetadata](docs/GoogleCloudFunctionsV2OperationMetadata.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2Stage](docs/GoogleCloudFunctionsV2Stage.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2StateMessage](docs/GoogleCloudFunctionsV2StateMessage.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2alphaLocationMetadata](docs/GoogleCloudFunctionsV2alphaLocationMetadata.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2alphaOperationMetadata](docs/GoogleCloudFunctionsV2alphaOperationMetadata.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2alphaStage](docs/GoogleCloudFunctionsV2alphaStage.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2alphaStateMessage](docs/GoogleCloudFunctionsV2alphaStateMessage.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2betaLocationMetadata](docs/GoogleCloudFunctionsV2betaLocationMetadata.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2betaOperationMetadata](docs/GoogleCloudFunctionsV2betaOperationMetadata.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2betaStage](docs/GoogleCloudFunctionsV2betaStage.md)
 - [CloudFunctionsApi.GoogleCloudFunctionsV2betaStateMessage](docs/GoogleCloudFunctionsV2betaStateMessage.md)
 - [CloudFunctionsApi.ListFunctionsResponse](docs/ListFunctionsResponse.md)
 - [CloudFunctionsApi.ListLocationsResponse](docs/ListLocationsResponse.md)
 - [CloudFunctionsApi.ListOperationsResponse](docs/ListOperationsResponse.md)
 - [CloudFunctionsApi.ListRuntimesResponse](docs/ListRuntimesResponse.md)
 - [CloudFunctionsApi.Location](docs/Location.md)
 - [CloudFunctionsApi.ModelDate](docs/ModelDate.md)
 - [CloudFunctionsApi.OnDeployUpdatePolicy](docs/OnDeployUpdatePolicy.md)
 - [CloudFunctionsApi.Operation](docs/Operation.md)
 - [CloudFunctionsApi.OperationMetadataV1](docs/OperationMetadataV1.md)
 - [CloudFunctionsApi.Policy](docs/Policy.md)
 - [CloudFunctionsApi.RepoSource](docs/RepoSource.md)
 - [CloudFunctionsApi.Runtime](docs/Runtime.md)
 - [CloudFunctionsApi.SecretEnvVar](docs/SecretEnvVar.md)
 - [CloudFunctionsApi.SecretVersion](docs/SecretVersion.md)
 - [CloudFunctionsApi.SecretVolume](docs/SecretVolume.md)
 - [CloudFunctionsApi.ServiceConfig](docs/ServiceConfig.md)
 - [CloudFunctionsApi.SetIamPolicyRequest](docs/SetIamPolicyRequest.md)
 - [CloudFunctionsApi.Source](docs/Source.md)
 - [CloudFunctionsApi.SourceProvenance](docs/SourceProvenance.md)
 - [CloudFunctionsApi.Status](docs/Status.md)
 - [CloudFunctionsApi.StorageSource](docs/StorageSource.md)
 - [CloudFunctionsApi.TestIamPermissionsRequest](docs/TestIamPermissionsRequest.md)
 - [CloudFunctionsApi.TestIamPermissionsResponse](docs/TestIamPermissionsResponse.md)
 - [CloudFunctionsApi.UpgradeInfo](docs/UpgradeInfo.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

